# task2.4_cut_str

./: CMakeLists.txt  README.md
substring/: CMakeLists.txt  substring_library.cpp  substring_library.hpp
substring/tests/: CMakeLists.txt  tests.cpp
